[project]
name = "thaipost-dino"
version = "0.1.0"
description = "DINOv3-based cargo space fill-level classifier"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "transformers>=4.46.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "psutil>=5.9.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.4.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
